Archive2/d7/27cc7992a82e8b/output
main.cpp:12:1: warning: extraneous template parameter list in template specialization
template <>
^~~~~~~~~~~
main.cpp:14:9: error: function template partial specialization is not allowed
Data<T> Get<Data<T>>() {
        ^  ~~~~~~~~~
main.cpp:18:1: warning: extraneous template parameter list in template specialization
template <>
^~~~~~~~~~~
main.cpp:20:16: error: function template partial specialization is not allowed
std::vector<T> Get<std::vector<T>>() {
               ^  ~~~~~~~~~~~~~~~~
main.cpp:25:18: error: call to 'Get' is ambiguous
    std::cout << Get<Data<int>>().data.size() << std::endl;  // expected output is 2
                 ^~~~~~~~~~~~~~
main.cpp:5:8: note: candidate function [with T = Data<int>]
size_t Get();
       ^
main.cpp:14:9: note: candidate function [with T = Data<int>]
Data<T> Get<Data<T>>() {
        ^
main.cpp:20:16: note: candidate function [with T = Data<int>]
std::vector<T> Get<std::vector<T>>() {
               ^
main.cpp:26:18: error: call to 'Get' is ambiguous
    std::cout << Get<std::vector<int>>().size() << std::endl; // expected output is 3
                 ^~~~~~~~~~~~~~~~~~~~~
main.cpp:5:8: note: candidate function [with T = std::__1::vector<int, std::__1::allocator<int> >]
size_t Get();
       ^
main.cpp:14:9: note: candidate function [with T = std::__1::vector<int, std::__1::allocator<int> >]
Data<T> Get<Data<T>>() {
        ^
main.cpp:20:16: note: candidate function [with T = std::__1::vector<int, std::__1::allocator<int> >]
std::vector<T> Get<std::vector<T>>() {
               ^
2 warnings and 4 errors generated.
